# gke-sample

./: .gitignore  ParameterTuning.md  PersistentDiskSetup.md  README.md
gke-sample/: README.md  pyproject.toml  source_env.sh
gke-sample/example/: bash_gke.py  bash_gke_create_cluster.py  bash_gke_delete_cluster.py  google_gcs.py  k8s_persistent_volume_claim.py  k8s_pod.py  k8s_register_storage_class.py  pulumi-gcs.py
gke-sample/src/gke_sample/bash_util/: utils.py
gke-sample/src/gke_sample/gcp_utils/: gcs.py  gke.py
gke-sample/src/gke_sample/k8s_utils/: persistent_volume.py  pod.py
gke-sample/tests/: test_gke_sample.py
scripts/: create_cluster.sh  pd-example-class.yaml  pvc-demo.yaml  pvc-demo_read_only.yaml  read-only-pd.yaml  read_only_pod.yaml  sample-pod.yaml  test-pv.yaml
